@@ -20,6 +20,8 @@ $_lang['downloaded'] = 'Downloaded';
 $_lang['download_extras'] = 'Download Extras';
 $_lang['downloads'] = 'Downloads';
 $_lang['installation_instructions'] = 'Installation Instructions';
+$_lang['installed'] = 'Installed';
+$_lang['last_updated'] = 'Last Updated';
 $_lang['lexicon_autobuilding'] = 'Auto-building in lexicon from path: [[+path]]';
 $_lang['lexicon_err_path_nf'] = '<b>Error</b> - Lexicon path not found: [[+path]]';
 $_lang['license'] = 'License';
@@ -104,6 +106,9 @@ $_lang['package_update_err_provider_nf'] = 'This package cannot be updated, beca
 $_lang['package_update_info_diff'] = 'Found package. Checking for version difference.';
 $_lang['package_update_info_provider_scan'] = 'Scanning for package updates from provider: [[+provider]]';
 $_lang['package_update_to_version'] = 'Please select the version to update this package to: ';
+$_lang['package_version_remove'] = 'Remove Package Version';
+$_lang['package_version_remove_confirm'] = 'Are you sure you want to attempt to remove the database record and transport files for this older version? Doing so will prevent you from rolling back changes to this version.';
+$_lang['package_view'] = 'View Package';
 $_lang['packages'] = 'Packages';
 $_lang['packages_browse_msg'] = 'Click details on a package to get more information. Click Download to download the package to your MODx Revolution install.';
 $_lang['packages_desc'] = 'Packages are collections of MODx components that can be used within MODx in a variety of ways. Here you can manage them, update their installation status, disable or enable installed packages, or download new ones from remote providers. Right-click on a row in the grid for more options.';
@@ -114,6 +119,7 @@ $_lang['preexisting_mode_remove_desc'] = 'This will completely uninstall the pac
 $_lang['preexisting_mode_restore'] = 'Restore';
 $_lang['preexisting_mode_restore_desc'] = 'This will restore the prior version\'s settings as they were before the newer version was installed.';
 $_lang['preexisting_mode_select'] = 'Please select an uninstall mode: ';
+$_lang['prior_versions'] = 'Prior Versions';
 $_lang['provider'] = 'Provider';
 $_lang['provider_add'] = 'Add New Provider';
 $_lang['provider_add_or'] = 'Or add a new provider...';
@@ -146,6 +152,7 @@ $_lang['released'] = 'Released';
 $_lang['released_on'] = 'Released On';
 $_lang['setup_options'] = 'Setup Options';
 $_lang['setup_options_desc'] = 'Please choose the appropriate options (if applicable) and click Finish to install the package.';
+$_lang['signature'] = 'Signature';
 $_lang['sort_by_dots'] = 'Sort By...';
 $_lang['supports'] = 'Supports';
 $_lang['top_rated'] = 'Top Rated';
@@ -153,6 +160,8 @@ $_lang['transport_package_create'] = 'Create new package';
 $_lang['transport_package_install'] = 'Install package';
 $_lang['transport_package_scan_for_updates'] = 'Check for updates';
 $_lang['uninstall'] = 'Uninstall';
+$_lang['uploaded_on'] = 'Uploaded On';
+$_lang['uploaded_versions'] = 'Uploaded Versions';
 $_lang['workspace'] = 'Workspace';
 $_lang['workspace_err_nf'] = 'Workspace not found.';
 $_lang['workspace_grabbing'] = 'Grabbing package workspace...';
