@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added Package View page to Package Management, allowing you to view more info about a package, view prior installed versions, and remove older package versions
 - Fixed typo in setup script for PM changes
 - Added version_major, version_minor, version_patch, release, and release_index fields to modTransportPackage tables to assist sorting and organization
 - Fixed bug in transport schema
